[package]
name = "create_broken_files"
version = "3.1.0"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2021"
description = "Create broken files from other ones"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.10.0"
clap = { version = "4.5.9", features = ["derive"] }
jwalk = "0.8.1"
